# vrun

./: .gitignore  Cargo.toml  README.md
samples/: brute.cpp  gen.cpp  sol.cpp
src/: main.rs
