[package]
name = "vrun"
version = "0.1.3"
edition = "2024"
description = "CLI tool for competitive programmers: testcase ingestion, execution, and stress testing"
license = "Apache-2.0"
repository = "https://github.com/adityabavadekar/vrun"
homepage = "https://github.com/adityabavadekar/vrun"
readme = "README.md"
keywords = ["testcases", "cli", "stress-testing", "codeforces"]
categories = ["command-line-utilities", "development-tools"]
exclude = ["samples/", "testcases/", "temp/"]

[dependencies]
clap = { version = "4.5", features = ["derive"] }
colored = "2.1"
serde = { version = "1.0", features = ["derive"] }
similar = "2.6"
log = "0.4"
env_logger = "0.11"
serde_json = "1.0"
ctrlc = "3"
tempfile = "3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = 'abort'
